--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -186,3 +186,10 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Map.Map
+GameDefaultMap=/Game/Map.Map
+
+[/Script/Engine.Engine]
+GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
+
