--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -189,6 +189,8 @@ ManualIPAddress=
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Map.Map
 GameDefaultMap=/Game/Map.Map
+bUseSplitscreen=False
+GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
 
 [/Script/Engine.Engine]
 GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
