--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,14 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=5A5D2258481210AE6E776394472E331B
+
+[/Script/CommonInput.CommonInputSettings]
+InputData=/CommonUI/GenericInputData.GenericInputData_C
+
+[CommonInputPlatformSettings_Windows CommonInputPlatformSettings]
+DefaultInputType=Gamepad
+bSupportsMouseAndKeyboard=True
+bSupportsTouch=False
+bSupportsGamepad=True
+DefaultGamepadName=Windows
+bCanChangeGamepadType=True
+
